<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fr.fondespierre.beweb.mobile.apprenants.DetailApprenantsActivity">

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="70dp"
                android:layout_height="100dp"
                app:srcCompat="@mipmap/ic_launcher_round"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="0dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_weight="0.95"
                        android:gravity="center_vertical"
                        android:text="@string/detailA_nom"
                        android:textAlignment="center" />

                    <TextView
                        android:id="@+id/detaile_apprenants_prenom"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_weight="1.08"
                        android:gravity="center_vertical"
                        android:text="@string/detailA_prenom"
                        android:textAlignment="center" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/detaile_apprenants_age"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_weight="1.09"
                        android:gravity="center_vertical"
                        android:text="@string/detailA_age"
                        android:textAlignment="center" />

                    <TextView
                        android:id="@+id/detaile_apprenants_tel"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="@string/detailA_tel"
                        android:textAlignment="center" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/detaile_apprenants_portfolio"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/detailA_url_portfolio"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/detaile_apprenants_mail"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="0.46"
                android:gravity="center"
                android:text="@string/detailA_email"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/detaile_apprenants_linkdin"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/detailA_url_linkedin"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/detaile_apprenants_facebook"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/detailA_url_facebook"
                android:textAlignment="center" />
        </LinearLayout>

        <TextView
            android:id="@+id/detaile_apprenants_skill_titre"
            android:layout_width="match_parent"
            android:layout_height="39dp"
            android:gravity="center_vertical"
            android:text="@string/detailA_titre_skills"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ListView
            android:id="@+id/detaile_apprenants_skill_liste"
            android:layout_width="match_parent"
            android:layout_height="36dp" />

        <TextView
            android:id="@+id/detaile_apprenants_formation_titre"
            android:layout_width="match_parent"
            android:layout_height="39dp"
            android:gravity="center_vertical"
            android:text="@string/detailA_titre_formation"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ListView
            android:id="@+id/detaile_apprenants_formation_liste"
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <TextView
            android:id="@+id/detaile_apprenants_projets_titre"
            android:layout_width="match_parent"
            android:layout_height="39dp"
            android:gravity="center_vertical"
            android:text="@string/detailA_projet_titre"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ListView
            android:id="@+id/detaile_apprenants_formation_liste"
            android:layout_width="match_parent"
            android:layout_height="38dp" />

        <TextView
            android:id="@+id/detaile_apprenants_info_titre"
            android:layout_width="match_parent"
            android:layout_height="39dp"
            android:gravity="center_vertical"
            android:text="@string/detailA_projet_titre"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ListView
            android:id="@+id/detaile_apprenants_formation_liste"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
